--- a/src/main/java/Interfaces/CarAsign.form
+++ b/src/main/java/Interfaces/CarAsign.form
@@ -78,7 +78,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Alquiler"/>
+                <Property name="text" type="java.lang.String" value="Asignaci&#xf3;n de Vehiculos"/>
               </Properties>
             </Component>
           </SubComponents>
