--- a/src/main/java/Interfaces/MenuPrincipal.form
+++ b/src/main/java/Interfaces/MenuPrincipal.form
@@ -161,6 +161,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="proflieBg" max="32767" attributes="0"/>
                   <Component id="clientBtn" alignment="0" max="32767" attributes="0"/>
                   <Component id="carBtn" alignment="0" max="32767" attributes="0"/>
                   <Component id="rentBtn" alignment="0" max="32767" attributes="0"/>
@@ -172,7 +173,9 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="190" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="proflieBg" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="clientBtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="carBtn" min="-2" max="-2" attributes="0"/>
@@ -190,8 +193,6 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-<<<<<<< Updated upstream
-=======
             <Container class="javax.swing.JPanel" name="proflieBg">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -231,7 +232,6 @@
                 </Component>
               </SubComponents>
             </Container>
->>>>>>> Stashed changes
             <Container class="javax.swing.JPanel" name="clientBtn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
