--- a/src/main/java/Interfaces/Clientes.form
+++ b/src/main/java/Interfaces/Clientes.form
@@ -369,6 +369,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Eliminar Cliente"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteBtnActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="540" y="270" width="270" height="50"/>
