--- a/src/main/java/Interfaces/Devoluciones.form
+++ b/src/main/java/Interfaces/Devoluciones.form
@@ -232,6 +232,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="asignarAreaText">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
