--- a/src/main/java/Interfaces/Clientes.form
+++ b/src/main/java/Interfaces/Clientes.form
@@ -320,10 +320,10 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
-                <StringItem index="0" value="Bronce"/>
-                <StringItem index="1" value="Plata"/>
-                <StringItem index="2" value="Oro"/>
-                <StringItem index="3" value="Zafiro"/>
+                <StringItem index="0" value="BRONZE"/>
+                <StringItem index="1" value="PLATA"/>
+                <StringItem index="2" value="ORO"/>
+                <StringItem index="3" value="ZAFIRO"/>
               </StringArray>
             </Property>
           </Properties>
