--- a/src/main/java/Interfaces/Devoluciones.form
+++ b/src/main/java/Interfaces/Devoluciones.form
@@ -237,7 +237,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTextArea" name="asignarAreaText">
+            <Component class="javax.swing.JTextArea" name="devolArea">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
